<resources>
    <string name="app_name">UFO in Photo</string>
    <string name="gallery">gallery</string>
    <string name="capture_using_camera">Capture using camera</string>
    <string name="last_pictures">Last pictures:</string>
    <string name="ready">Ready</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="unable_to_read_image">I was unable to read an image.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="read_external_storage_explanation">Application needs permission to read storage, so it can edit images from gallery.</string>
    <string name="write_external_storage_explanation">Application needs permission to save file to gallery.</string>
    <string name="chosen_ufo_image">Chosen UFO Image</string>
    <string name="ufo_icon_to_choose">ufo_icon_to_choose</string>
    <string name="no_image_was_selected">No image was selected.</string>
    <string name="share">Share</string>
    <string name="save_in_album">Save in album</string>
    <string name="start_over">Start over</string>
    <string name="file_not_found">File not found.</string>
    <string name="error_access_file">Error when trying access file.</string>
    <string name="saved_in_album">Saved In Album</string>
    <string name="img_not_selected">Image not selected.</string>
    <string name="currently_editing_image">Currently editing image</string>
    <string name="img_has_been_saved">Image has been saved.</string>
    <string name="move_left">Move left</string>
    <string name="move_right">Move right</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="mirror_hor">Mirror Horizontal</string>
    <string name="mirror_vertical">Mirror vertical</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="transparent">Transparent</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
</resources>
