<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kaizen.hoymm.ufoinphoto.EditImageActivity.ImgReadyActivity.ImgReadyActivity"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:scaleType="fitCenter"
        android:src="@drawable/img8"
        android:layout_gravity="center"
        android:id="@+id/illustrativeImgId"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="top|center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:gravity="center"
            android:id="@+id/shareButtonId"
            android:text="@string/share"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:gravity="center"
            android:id="@+id/saveInAlbumButtonId"
            android:text="@string/save_in_album"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:gravity="center"
            android:id="@+id/startOverButtonId"
            android:text="@string/start_over"
            />


    </LinearLayout>


</LinearLayout>
