<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kaizen.hoymm.ufoinphoto.MainActivity"
    android:background="@color/appThemeColor"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/imageViewId"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/captureUsingCameraButtonId"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/captureUsingCameraButtonId"
        android:id="@+id/galleryButtonId"
        app:layout_constraintVertical_bias="0.501"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_using_camera"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/galleryButtonId"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/captureUsingCameraButtonId"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_pictures"
        android:textColor="@color/textColor"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/captureUsingCameraButtonId" />

</android.support.constraint.ConstraintLayout>
