<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appThemeColor"
    tools:context="com.kaizen.hoymm.ufoinphoto.EditImageActivity.EditImageActivity">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/appThemeColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/topButtonsLinearLayout">
        <Button
            android:id="@+id/btnBackId"
            style="@style/ButtonStyle"
            android:text="@string/back" />
        <Button
            android:id="@+id/btnHelpId"
            style="@style/ButtonStyle"
            android:text="@string/help"
            />

        <Button
            android:id="@+id/btnReadyId"
            style="@style/ButtonStyle"
            android:text="@string/ready" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/topButtonsLinearLayout"
        app:layout_constraintBottom_toTopOf="@+id/footerFrameId"
        android:id="@+id/editImageFrameId"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageToEditId"
            android:adjustViewBounds="true"
            android:scaleType="center"
            />
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/footerFrameId"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0">
    </FrameLayout>

</android.support.constraint.ConstraintLayout>
